--- a/src/Components/ImageSlider/styles.css
+++ b/src/Components/ImageSlider/styles.css
@@ -1,13 +1,31 @@
-/* .slick-arrow.slick-prev
+.image_slider_container {
+    width: 100%;
+    height: 50rem;
+    /* overflow: hidden; */
+    /* display: none; */
+    /* margin: 5rem; */
+}
+
+.img_container {
+width: 100%;
+height: 50rem;
+}
+
+.img_container img {
+    width: 100%;
+    height: 100%;
+}
+
+
+.slick-arrow.slick-prev
  {
-    z-index: 999;
     left: 1rem;
+    z-index: 1;
 }
 
 .slick-arrow.slick-next {
     right: 4rem;
 }
-
 
 .slick-prev:before , .slick-next:before{
     font-size: 4rem;
@@ -26,10 +44,3 @@
 .slick-dots li {
     margin-left: 20px;
 }
-
- .main {
-    z-index: -1;
-} */
-
-
-  
