--- a/src/Components/Courses/style.css
+++ b/src/Components/Courses/style.css
@@ -30,8 +30,9 @@ position: relative;
 
 .slick-prev:before , .slick-next:before{
     font-size: 4rem;
-    color: #ffffff;
+    color: #ff0000;
     opacity: 0.7;
+    /* display: none; */
 }
 
 .slick-dots {
@@ -45,35 +46,4 @@ position: relative;
 
 .slick-dots li {
     margin-left: 20px;
-}
-
-@media only screen and (max-width: 768px){
-    .image_slider_container {
-        width: 100%;
-        height: 25rem;
-    }
-    
-    .img_container {
-    width: 100%;
-    height: 25rem;
-    }
-    
-    .slick-prev:before , .slick-next:before{
-        font-size: 4rem;
-        color: #000;
-        opacity: 0.4;
-        display: none;
-    }
-    
-    .slick-dots {
-        bottom: 4px;
-    }
-    
-    .slick-dots li button:before {
-        font-size: 1rem;
-    }
-    
-    .slick-dots li {
-        margin-left: 0px;
-    }  
 }
